--- a/styles/Add.module.css
+++ b/styles/Add.module.css
@@ -3,6 +3,7 @@
   margin: 20px;
   background-color: #d1411e;
   width: 150px;
+  height: 50px;
   border-radius: 10px;
   color: white;
   font-weight: 500;
